--- a/src/utils/style/index.css
+++ b/src/utils/style/index.css
@@ -1,4 +1,5 @@
 :root {
+  --background-image: url('https://assets-global.website-files.com/64da3cdd1d11a292e297fca8/662a9cc4e8554a6fb7e4855e_Energy%20wave%20-MOD-p-2000.webp');
   --main-color: #ffffff;
   --text-color: #000000;
   --details-color: #f08080;
@@ -7,7 +8,8 @@
 }
 
 [data-theme='dark'] {
-  --main-color: #ffffff;
+  --background-image: url('../../../public/images/bg2.jpg');
+  --main-color: #b0c4de;
   --text-color: #000000;
   --details-color: #f08080;
   --project-color-bg: #000000;
@@ -24,7 +26,7 @@
 }
 
 .start {
-  background-image: url('https://assets-global.website-files.com/64da3cdd1d11a292e297fca8/662a9cc4e8554a6fb7e4855e_Energy%20wave%20-MOD-p-2000.webp');
+  background-image: var(--background-image);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
